[tool.poetry]
name = "val-store"
version = "0.1.0"
description = ""
authors = ["Pierre-Louis Sergent <papa.louis59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
